src/test/ui/nll/user-annotations/issue-55748-pat-types-constrain-bindings.stderr
error[E0308]: mismatched types
  --> $DIR/issue-55748-pat-types-constrain-bindings.rs:18:54
   |
LL |     let ((mut y, mut _z),): (PairUncoupled<u32>,) = ((s, &_x),); // ok
   |                                                      ^^^^^^^^ expected u32, found reference
   |
   = note: expected type `type PairUncoupled`
              found type `(&'static u32, &&'a u32)`

error[E0308]: mismatched types
  --> $DIR/issue-55748-pat-types-constrain-bindings.rs:29:51
   |
LL |     let ((y, _z),): (PairCoupledRegions<u32>,) = ((s, &_x),);
   |                                                   ^^^^^^^^ expected u32, found reference
   |
   = note: expected type `type PairCoupledRegions`
              found type `(&'static u32, &&'a u32)`

error[E0308]: mismatched types
  --> $DIR/issue-55748-pat-types-constrain-bindings.rs:43:50
   |
LL |     let ((y, _z),): (PairCoupledTypes<&u32>,) = ((s, &_x),);
   |                                                  ^^^^^^^^ expected u32, found reference
   |
   = note: expected type `type PairCoupledTypes`
              found type `(&'static u32, &&'a u32)`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
